--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/photo"
-        android:text="CareToCare "
+        android:text="CareToCar "
         android:id="@+id/textView"
         android:layout_centerHorizontal="true"
         android:textSize="35dp" />
