--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/bn_ask4help"
             android:layout_alignParentLeft="true"
-            android:textColor="#00C853"
+            android:textColor="#F9A825"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:textAllCaps="false"
             style="?android:attr/borderlessButtonStyle"
             android:text="@string/bn_showMyRequests"/>
@@ -80,7 +82,9 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             style="?android:attr/borderlessButtonStyle"
-            android:textColor="#00C853"
+            android:textColor="#F9A825"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:textAllCaps="false"
             android:text="@string/bn_showMyVolunteering"
             android:layout_below="@id/bn_ask4help"
