--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -65,7 +65,7 @@
         android:hint="Phone"
         android:inputType="phone" />
 
-    <Spinner
+   <!-- <Spinner
         android:id="@+id/sp_area"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,7 +74,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:entries="@array/area"/>
+        android:entries="@array/area"/>-->
 
     <com.ruthiy.care2car.utils.views.MyButton
         android:layout_width="wrap_content"
@@ -83,15 +83,15 @@
         android:id="@+id/button"
         android:textAllCaps="false"
         android:background="@drawable/mybutton"
-        android:layout_below="@+id/sp_area"
+        android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="60dp" />
 
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
-        android:layout_below="@+id/sp_area"
+        android:layout_below="@+id/editText2"
         android:layout_alignLeft="@+id/textView2"
         android:layout_alignStart="@+id/textView2"
         android:layout_alignRight="@+id/textView2"
